# pdfchat

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workfows/: sync-to-hugging-face-hub.yaml
scripts/: generate-requirements.sh
src/pdfchat/: app.py
