[project]
name = "pdfchat"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Peinan Zhang", email = "peinan7@gmail.com" }
]
dependencies = [
    "gradio>=4.19.2",
    "langchain>=0.1.9",
    "gradio-pdf>=0.0.5",
    "loguru>=0.7.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "icecream>=2.1.3",
    "ipython>=8.22.1",
]

[tool.rye.scripts]
server = "python src/pdfchat/app.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pdfchat"]
